# Android

./: .gitignore  .gitmodules  BuildHelper.cmake  README.md  build.gradle  get_dependencies.bat  get_dependencies.sh  settings.gradle
.github/: dependabot.yml
.github/workflows/: build-game.yml
Cytopia/: CMakeLists.txt  build.gradle
Cytopia/src/main/: AndroidManifest.xml
Cytopia/src/main/java/com/cytopia/cytopia/: MainActivity.java
SDL2/: CMakeLists.txt  build.gradle
SDL2/src/main/: AndroidManifest.xml
libnoise/: build.gradle
libogg/: build.gradle
libpng/: CMakeLists.txt  build.gradle
libvorbis/: CMakeLists.txt  build.gradle
openal/: build.gradle
openal-soft/: CMakeLists.txt  build.gradle
zlib/: CMakeLists.txt  build.gradle
